# cpp-designPatterns

./: INSTALL_MAC.md  INSTALL_UBUNTU.md  README.md
adapter/: README.md
adapter/src/: Adapter.hpp  ClassA.hpp  ClassB.hpp  main.cpp
bridge/: CMakeLists.txt  README.md
bridge/src/: main.cpp
composite/: README.md  compileAndLaunch.sh
composite/src/: Creature.hpp  GroupGraphic.hpp  main.cpp
decorator/: README.md
decorator/src/: main.cpp
factories/: CMakeLists.txt  README.md  compileAndLaunch.sh
factories/src/: Coffee.hpp  CoffeeFactory.hpp  DrinkFactory.hpp  HotDrink.hpp  HotDrinkFactory.hpp  Point.hpp  PointFactory.hpp  Tea.hpp  TeaFactory.hpp  main.cpp
flyweight/: README.md
flyweight/src/: BoostUser.hpp  FormattedText.hpp  User.hpp  main.cpp
memento/: .gitignore  CMakeLists.txt  README.md
memento/src/: Caretaker.hpp  ConcreteMemento.hpp  Memento.hpp  Originator.hpp  main.cpp
prototype/: CMakeLists.txt  README.md  compileAndLaunch.sh
prototype/src/: Address.hpp  Employee.hpp  EmployeeFactory.hpp  main.cpp
singleton/: CMakeLists.txt  README.md  compileAndLaunch.sh
singleton/src/: Singleton.hpp  main.cpp
